--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,15 +1,20 @@
+/* *{
+    /* overflow-x: hidden; 
+}*/
 .contact{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height:100vh;
+    height:100vh;
     width: 100vw;
     background-color: rgb(50, 19, 124);
 
 }
+
 form{
     max-width: 600px;
     width: 100%;
+    height: 80vh;
     background: #fff;
     padding: 25px 25px 30px ;
     border-radius: 8px;
@@ -25,7 +30,7 @@ form h2{
 }
 
 form .input-box{
-    margin-top: 20px;  
+    margin-top: 12px;  
 }
 
 .input-box .field{
@@ -38,18 +43,19 @@ form .input-box{
     outline: none;
     font-size: 16px;
     color: #333;
-    margin-top: 8px;
+    margin-top: 4px;
 
 
 }
 
 .input-box .fieldMess{
-    height: 200px;
+    height: 100px;
     width: 570px;
     resize: none;
     font-size: 20px;
     opacity: 0.7;
 }
+
 form button{
     width: 100%;
     height: 55px;
@@ -64,7 +70,8 @@ form button{
     margin-top:25px ;
     transition: .5s;
 }
+
 form button:hover{
     background: #624ec6;
 
-}
+} 
