--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,13 +1,12 @@
-/* *{
-    /* overflow-x: hidden; 
-}*/
+*{
+     overflow-x: hidden; 
+}
 .contact{
     display: flex;
     justify-content: center;
     align-items: center;
-    height:100vh;
-    width: 100vw;
-    background-color: rgb(50, 19, 124);
+  
+    background-color: rgb(74, 133, 185);
 
 }
 
